<resources>
    <string name="app_name">Codelab Layouts</string>
    <string name="title_username">Username</string>
    <string name="title_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_in_with">Sign in with</string>
    <string name="button_sign_up">Sign up</string>
</resources>
